[157c988514fe18f6b8102b4e4eddad86802c6328]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/tutorial/artigos.html
+++ b/tutorial/artigos.html
@@ -498,8 +498,8 @@
 
 <span class="o">&gt;</span> <span class="nx">https</span><span class="o">://</span><span class="nx">kubernetes</span><span class="o">.</span><span class="nx">io</span><span class="o">/</span><span class="nx">docs</span><span class="o">/</span><span class="nx">tutorials</span><span class="o">/</span><span class="nx">kubernetes</span><span class="o">-</span><span class="nx">basics</span><span class="o">/</span>
 
-<span class="c1">## Montando um Cluster em Kubernetes
-</span>
+<span class="c1">## Montando um Cluster em Kubernetes</span>
+
 <span class="nx">Estou</span> <span class="nx">levando</span> <span class="nx">em</span> <span class="nx">consideração</span> <span class="nx">que</span> <span class="nx">você</span> <span class="nx">já</span> <span class="nx">tenha</span> <span class="nx">o</span> <span class="sb">`Azure CLI`</span> <span class="nx">configurado</span> <span class="nx">na</span> <span class="nx">sua</span> <span class="nx">máquina</span><span class="p">,</span> <span class="nx">caso</span> <span class="nx">não</span> <span class="nx">tenha</span> <span class="nx">segue</span> <span class="nx">um</span> <span class="nx">tutorial</span> <span class="nx">de</span> <span class="nx">configuração</span><span class="o">:</span>
 
 <span class="o">&gt;</span> <span class="nx">https</span><span class="o">://</span><span class="nx">docs</span><span class="o">.</span><span class="nx">microsoft</span><span class="o">.</span><span class="nx">com</span><span class="o">/</span><span class="nx">en</span><span class="o">-</span><span class="nx">us</span><span class="o">/</span><span class="nx">cli</span><span class="o">/</span><span class="nx">azure</span><span class="o">/</span><span class="nx">install</span><span class="o">-</span><span class="nx">azure</span><span class="o">-</span><span class="nx">cli</span><span class="o">?</span><span class="nx">view</span><span class="o">=</span><span class="nx">azure</span><span class="o">-</span><span class="nx">cli</span><span class="o">-</span><span class="nx">latest</span>
