[9aa19b8c376005bd1f8580ec48fb96f731a48f39]: Updated '_i18n/en/_posts/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -352,6 +352,13 @@
       <td><em>No</em></td>
       <td><em>No</em></td>
     </tr>
+    <tr>
+      <td>Hypercard</td>
+      <td>Yes</td>
+      <td>Yes</td>
+      <td><em>No</em></td>
+      <td><em>No</em></td>
+    </tr>
   </tbody>
 </table>
 
@@ -1036,7 +1043,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
 </table>
@@ -1633,7 +1640,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
 </table>
@@ -2046,7 +2053,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
 </table>
@@ -2720,7 +2727,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Sequence</code></td>
@@ -7707,7 +7714,7 @@ That way, when a transaction with recurrent markup is submitted to the API and C
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
 </table>
@@ -9773,7 +9780,7 @@ It is possible to carry out both the total cancellation and the partial cancella
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
 </table>
@@ -11237,7 +11244,7 @@ To use wallets in the API Cielo eCommerce, the merchant must have the wallets in
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.SecurityCode</code></td>
