[de0a69cb2c44e32db71138a0246ae7fc4e6d1281]: Updated '_i18n/en/_posts/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -353,7 +353,7 @@
       <td><em>No</em></td>
     </tr>
     <tr>
-      <td>Hypercard</td>
+      <td>Hipercard</td>
       <td>Yes</td>
       <td>Yes</td>
       <td><em>No</em></td>
