[00aea4d7e2d9a9bd007a16bf2dbf42d1fab2aaed]: Merge pull request #35 from lysmeneguelli/patch-1
Update 2015-03-25-webservice-1.5.md

--- a/manual/webservice-1-5.html
+++ b/manual/webservice-1-5.html
@@ -262,6 +262,13 @@ para iniciar a operação no ambiente de produção.</p>
       <td><em>Não</em></td>
       <td><em>Não</em></td>
     </tr>
+    <tr>
+      <td>Hipercard</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td><em>Não</em></td>
+      <td><em>Não</em></td>
+    </tr>
   </tbody>
 </table>
 
@@ -801,7 +808,7 @@ mensagem=10069930690101012005100699306925fbb99741c739dd84d7b06ec78c9bac718838630
       <td>Alfanumérico</td>
       <td>Sim</td>
       <td>n/a</td>
-      <td>Nome da bandeira (minúsculo): “visa”, “mastercard”, “diners”, “discover”, “elo”, “amex”, “jcb”, “aura”</td>
+      <td>Nome da bandeira (minúsculo): “visa”, “mastercard”, “diners”, “discover”, “elo”, “amex”, “jcb”, “aura”, “hipercard”</td>
     </tr>
     <tr>
       <td>produto</td>
@@ -2183,7 +2190,7 @@ mensagem=10069930690101012005100699306925fbb99741c739dd84d7b06ec78c9bac718838630
     </tr>
     <tr>
       <td>475</td>
-      <td>Timeout</td>
+      <td>Timeout de Cancelamento</td>
       <td>A aplicação não respondeu dentro de 25 segundos.</td>
       <td>Realizar uma nova tentativa após alguns segundos. Persistindo, entrar em contato com o Suporte.</td>
     </tr>
@@ -2347,7 +2354,7 @@ mensagem=10069930690101012005100699306925fbb99741c739dd84d7b06ec78c9bac718838630
       <li>Na autorização direta, o nível de segurança da transação (ECI) é definido como:
         <ul>
           <li>“7” para Visa, Diners, Discover, Elo e JCB.</li>
-          <li>“0” para Mastercard e Aura</li>
+          <li>“0” para Mastercard, Aura e Hipercard.</li>
         </ul>
       </li>
     </ul>
