[37f4b81aa6984b235d8d2e255204dd1efdb7cd51]: Update 2017-01-01-cielo-lio.md

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -2596,7 +2596,7 @@ Iniciar processo de pagamento</p>
 
 <p>No Dev Console o desenvolvedor consegue visualizar todos os seus aplicativos publicados sejam eles aplicativos próprios ou públicos.</p>
 
-<p>Acesse agora o Dev Console:</p>
+<p>Acesse agora o Dev Console: https://www.cieloliostore.com.br</p>
 
 <h3 id="status-de-um-aplicativo">Status de um aplicativo</h3>
 
