[91ee924bd1546dc82fbdc908ef0970ad95b1ef62]: Updated '_i18n/en/_posts/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/en/404.html
+++ b/en/404.html
@@ -75,7 +75,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/en/manual/cielo-ecommerce">API Cielo eCommerce</a>
+                    <a href="https://developercielo.github.io/en/manual/cielo-ecommerce">Integration Manual</a>
                 </li>
             
             </ul>
