--- a/en/index.html
+++ b/en/index.html
@@ -98,7 +98,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/en/manual/cielo-ecommerce">API Cielo eCommerce</a>
+                    <a href="https://developercielo.github.io/en/manual/cielo-ecommerce">Integration Manual</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
             
