Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 <header class="logo">
     <div class="home-header-container">
         <div class="help-lang">
-            <a href="http://www.braspag.com.br/fale-conosco/" class="help">{% t global.support %}</a>
+            <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/contact" class="help">{% t global.support %}</a>
         <div class="lang">
             <span>{% t global.languages %}</span>
 
