[ff2d3dd47cf62e5cf0dda45a69bed8eeae078aa3]: Updated 'index.html' via CloudCannon

--- a/en/index.html
+++ b/en/index.html
@@ -52,7 +52,7 @@
         <header class="logo">
     <div class="home-header-container">
         <div class="help-lang">
-            <a href="http://www.braspag.com.br/fale-conosco/" class="help">Help</a>
+            <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/contact" class="help">Help</a>
         <div class="lang">
             <span>Languages</span>
 
