[849359bdccd8edb4b6761b4cca759ae4f6ffb912]: Updated '_i18n/pt/_posts/webservice/2015-03-25-webservice-1.5.md' via CloudCannon

--- a/manual/webservice-1-5.html
+++ b/manual/webservice-1-5.html
@@ -140,7 +140,9 @@
 
 <aside class="warning">O Webservice 1.5 foi descontinuado. O documento abaixo existe como base de conhecimento para clientes ja integrados. Novos cadastros não serão realizados pelo atendimento Cielo</aside>
 
-<aside class="notice">Para novas integrações, veja API Cielo E-commece </aside>
+<blockquote>
+  <p>Para novas integrações, veja <a href="https://developercielo.github.io/manual/cielo-ecommerce">API Cielo E-commece</a></p>
+</blockquote>
 
 <p>O objetivo desta documentação é orientar o desenvolvedor sobre como integrar com a solução Webservice da Cielo, descrevendo as funcionalidades, os métodos a serem utilizados, listando informações a serem enviadas e recebidas, e provendo exemplos.</p>
 
