[622d14cbb775bc1d9e14f8cd0fdcb91325b6c14d]: Updated '_i18n/pt/_posts/webservice/2015-03-25-webservice-1.5.md' via CloudCannon

--- a/manual/webservice-1-5.html
+++ b/manual/webservice-1-5.html
@@ -131,7 +131,7 @@
 <aside class="warning">O Webservice 1.5 foi descontinuado. O documento abaixo existe como base de conhecimento para clientes ja integrados. Novos cadastros não serão realizados pelo atendimento Cielo</aside>
 
 <blockquote>
-  <p>Para novas integrações, veja <a href="https://developercielo.github.io/manual/cielo-ecommerce">API Cielo E-commece</a></p>
+  <p>Para novas integrações, veja <a href="https://developercielo.github.io/manual/cielo-ecommerce">API Cielo E-commerce</a></p>
 </blockquote>
 
 <p>O objetivo desta documentação é orientar o desenvolvedor sobre como integrar com a solução Webservice da Cielo, descrevendo as funcionalidades, os métodos a serem utilizados, listando informações a serem enviadas e recebidas, e provendo exemplos.</p>
@@ -140,7 +140,7 @@
 
 <p>Após a conclusão do credenciamento e recebimento das instruções é preciso desenvolver a integração utilizando como guia este manual. Assim que a integração estiver concluída, é necessário preencher completamente o formulário de homologação e enviá-lo para o Suporte Web do Cielo eCommerce que informará ao estabelecimento a chave de segurança.</p>
 
-<p>Por fim, após o término do desenvolvimento, é preciso dar início à homologação junto à <strong>Cielo</strong>
+<p>Por fim, após o término do desenvolvimento, é preciso dar início à homologação junto à Cielo
 para iniciar a operação no ambiente de produção.</p>
 
 <aside class="notice">Veja a seção Homologação para instruções sobre o processo de homologação</aside>
