[e95710a1fe68ff622f64578fb4bed2fa1d58d11d]: Updated '_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md' via CloudCannon

--- a/tutorial/guia-de-migracao.html
+++ b/tutorial/guia-de-migracao.html
@@ -111,7 +111,7 @@
 <aside class="warning">O Webservice 1.5 foi descontinuado. O documento abaixo existe como base de conhecimento para clientes ja integrados. Novos cadastros não serão realizados pelo atendimento Cielo</aside>
 
 <blockquote>
-  <p>Para novas integrações, veja <a href="https://developercielo.github.io/manual/cielo-ecommerce">API Cielo E-commece</a></p>
+  <p>Para novas integrações, veja <a href="https://developercielo.github.io/manual/cielo-ecommerce">API Cielo E-commerce</a></p>
 </blockquote>
 
 <p>Esse guia tem como propósito facilitar a migração da integração entre as soluções Webservice 1.5 e API 3.0. Antes de ler esse guia, é altamente recomentado que você tenha lido o manual de integração da solução para qual pretende migrar sua integração atual. Os manuais podem ser encontrados em:</p>
