[aa6859fdd1541d042c7cdcf3ae87b681f45f15c3]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -166,7 +166,7 @@
 
 <p>A solução API Cielo eCommerce da plataforma Cielo eCommerce foi desenvolvida com a tecnologia REST, que é padrão de mercado e independe da tecnologia utilizada por nossos clientes. Dessa forma, é possível integrar-se utilizando as mais variadas linguagens de programação, tais como: ASP, ASP. Net, Java, PHP, Ruby, Python, etc.</p>
 
-<p>Para Obter exemplos dessas linguagens, veja nosso tutorial de conversao via nosso <a href="https://developercielo.github.io/Tutorial//Postman"><strong>Tutorial Postman</strong></a></p>
+<p>Para Obter exemplos dessas linguagens, veja nosso tutorial de conversao via nosso <a href="https://developercielo.github.io/tutorial/postman"><strong>Tutorial Postman</strong></a></p>
 
 <p>Entre outras características, os atributos que mais se destacam na plataforma Cielo eCommerce:</p>
 
