[078a5110433745c0cfd719b22977dd75477d9b7f]: Updated '_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md' via CloudCannon

--- a/en/tutorial/postman.html
+++ b/en/tutorial/postman.html
@@ -134,6 +134,31 @@
   <li><strong>Installing the Chrome extension</strong>: Just go to the Chrome Store and install the Postman extension</li>
 </ul>
 
+<h2 id="installing-the-chrome-extension">Installing the Chrome extension</h2>
+
+<p>1.Go to the Chrome Store, search for POSTMAN in APPs</p>
+
+<p><img src="https://developercielo.github.io/images/additional documents/tutorial-postman/p1.png" alt="" /></p>
+
+<ol>
+  <li>At the App’s tab, in your Google Chrome, go to the Postman icon</li>
+</ol>
+
+<p><img src="https://developercielo.github.io/images/p2.png" alt="" /></p>
+
+<ol>
+  <li>When accessing Postman for the first time,a login account will be requested. This step is optional.
+If you choose to creat an account, It will synchronize your settings and APIs through any device where a Postman instance is running with the same account</li>
+</ol>
+
+<p><img src="https://developercielo.github.io/images/p3.png" alt="" /></p>
+
+<ol>
+  <li>Set up your Collections and environments to start testing</li>
+</ol>
+
+<p><img src="https://developercielo.github.io/images/p4.png" alt="" /></p>
+
 </div>
 
 
