[26db71aa650f3d3d2fbf68fb06774dba8c9378a8]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -830,7 +830,7 @@ Abaixo especificamos qualquer diferença existente:</p>
   </tbody>
 </table>
 
-<h1 id="pagamentos-com-cartão-de-crédito">Pagamentos com Cartão de Crédito</h1>
+<h1 id="pagamentos---cartão-de-crédito">Pagamentos - Cartão de Crédito</h1>
 
 <p>Para que você possa disfrutar de todos os recursos disponíveis em nossa API, é importante que antes você conheça os conceitos envolvidos no processamento de uma transação de cartão de crédito.</p>
 
@@ -3468,7 +3468,7 @@ Abaixo especificamos qualquer diferença existente:</p>
   </tbody>
 </table>
 
-<h1 id="pagamentos-com-cartão-de-débito">Pagamentos com Cartão de Débito</h1>
+<h1 id="pagamentos---cartão-de-débito">Pagamentos - Cartão de Débito</h1>
 
 <h2 id="criando-uma-venda-simplificada">Criando uma venda simplificada</h2>
 
@@ -3774,7 +3774,7 @@ Abaixo especificamos qualquer diferença existente:</p>
   </tbody>
 </table>
 
-<h1 id="pagamentos-com-transferência-eletronica">Pagamentos com Transferência Eletronica</h1>
+<h1 id="pagamentos---transferência-eletronica">Pagamentos - Transferência Eletronica</h1>
 
 <h2 id="criando-uma-venda-simplificada-1">Criando uma venda simplificada</h2>
 
@@ -3993,7 +3993,7 @@ Abaixo especificamos qualquer diferença existente:</p>
   </tbody>
 </table>
 
-<h1 id="pagamentos-com-boleto">Pagamentos com Boleto</h1>
+<h1 id="pagamentos---boleto">Pagamentos - Boleto</h1>
 
 <h2 id="criando-uma-venda-de-boleto">Criando uma venda de Boleto</h2>
 
