--- a/manual/webservice-1-5.html
+++ b/manual/webservice-1-5.html
@@ -2176,7 +2176,7 @@ mensagem=10069930690101012005100699306925fbb99741c739dd84d7b06ec78c9bac718838630
       <td>98</td>
       <td>Timeout</td>
       <td>A aplicação não respondeu dentro de 25 segundos.</td>
-      <td>Consultar a transação e avaliar o status antes de submeter um novo cancelamento. Persistindo, entrar em contato com o Suporte.</td>
+      <td>Consultar a transação e avaliar o status antes de submeter a transação. Persistindo, entrar em contato com o Suporte.</td>
     </tr>
     <tr>
       <td>99</td>
