[a6474b3eff9757a8f9de77ae407ab9e6ddadb119]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -1039,7 +1039,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Sim</td>
+      <td>Não</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
@@ -1560,7 +1560,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Número</td>
       <td>15</td>
       <td>Não</td>
-      <td><a href="https://developercielo.github.io/Webservice-3.0/#anexos">Veja Anexo</a></td>
+      <td><a href="https://developercielo.github.io/manual/cielo-ecommerce#service-tax-amount-taxa-de-embarque">Veja Anexo</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.SoftDescriptor</code></td>
@@ -1636,7 +1636,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Sim</td>
+      <td>Não</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
@@ -2049,7 +2049,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Sim</td>
+      <td>Não</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
@@ -2723,7 +2723,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Sim</td>
+      <td>Não</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
@@ -7717,7 +7717,7 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Sim</td>
+      <td>Não</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
@@ -9739,7 +9739,7 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
       <td>Número</td>
       <td>15</td>
       <td>Não</td>
-      <td><a href="https://developercielo.github.io/Webservice-3.0/#anexos">Veja Anexo</a></td>
+      <td><a href="https://developercielo.github.io/manual/cielo-ecommerce#service-tax-amount-taxa-de-embarque">Veja Anexo</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.CardNumber</code></td>
@@ -9780,7 +9780,7 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Sim</td>
+      <td>Não</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
@@ -11244,7 +11244,7 @@ Para utilizar carteiras na API Cielo eCommerce, o lojista deverá possuir as car
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Sim</td>
+      <td>Não</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
