[1453efb26c3c5b63c1ab11982ff6557e6ece0aed]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -2721,7 +2721,7 @@ Nessa forma de pagamento, é necessário apenas fazer a chamada do método envia
 <p>Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
 <img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg" alt="fluxo parcial" /></p>
 
-<h2 id="6-cancelamento">6. Cancelamento</h2>
+<h2 id="cancelamento">Cancelamento</h2>
 
 <p>Existem 2 formas de cancelar um pagamento na Cielo LIO:
 <a href="https://developercielo.github.io/manual/cielo-lio#cancelar-pagamento-total">Cancelar Pagamento Total</a>
@@ -2828,7 +2828,7 @@ Os parâmetros do método anterior, com a inclusão de um parâmetro que é o va
 <p>Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcelado:
 <img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg" alt="fluxo parcial" /></p>
 
-<h2 id="7-listagem-de-pedidos">7. Listagem de Pedidos</h2>
+<h2 id="listagem-de-pedidos">Listagem de Pedidos</h2>
 
 <p>Na listagem de pedidos, é possível obter todas os pedidos (Orders) abertas na Cielo LIO pelo aplicativo do parceiro. Para isso, basta utilizar a função abaixo:</p>
 
@@ -2836,7 +2836,7 @@ Os parâmetros do método anterior, com a inclusão de um parâmetro que é o va
 
 <p>O objeto ResultOrders contém uma lista com todas as ordens abertas assinadas com as credenciais da aplicação.</p>
 
-<h2 id="8-finalizar-uso-do-ordermanager">8. Finalizar uso do OrderManager</h2>
+<h2 id="finalizar-uso-do-ordermanager">Finalizar uso do OrderManager</h2>
 
 <p>Após executar todas as operações de pagamento e caso não seja necessário utilizar o objeto orderManager, utilize método unbind para desvincular o contexto e evitar problemas de integridade.</p>
 
