--- a/tutorial/postman.html
+++ b/tutorial/postman.html
@@ -447,6 +447,21 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
             });
 
             prettyPrint();
+
+            var first = true;
+
+            function setTocHeight() {
+                var sideAbout = $('.sidebar-about').outerHeight();
+                var fixedFooter = $('.fixed-footer').outerHeight();
+                var footerIconHeight = first ? 14 : 0;
+                
+                $('#toc').css('height', 'calc(100vh - ' + (sideAbout + fixedFooter + footerIconHeight) + 'px)');
+            }
+
+            setTocHeight();
+            first = false;
+
+            $(window).resize(setTocHeight);
         });
         </script>
 
