--- a/en/tutorial/sdks-cielo.html
+++ b/en/tutorial/sdks-cielo.html
@@ -340,6 +340,21 @@
             });
 
             prettyPrint();
+
+            var first = true;
+
+            function setTocHeight() {
+                var sideAbout = $('.sidebar-about').outerHeight();
+                var fixedFooter = $('.fixed-footer').outerHeight();
+                var footerIconHeight = first ? 14 : 0;
+                
+                $('#toc').css('height', 'calc(100vh - ' + (sideAbout + fixedFooter + footerIconHeight) + 'px)');
+            }
+
+            setTocHeight();
+            first = false;
+
+            $(window).resize(setTocHeight);
         });
         </script>
 
