--- a/faq/faq-cielo-lio.html
+++ b/faq/faq-cielo-lio.html
@@ -425,6 +425,21 @@ Caso decida por Aplicativo Público na Cielo Store, você já consegue fazer o u
             });
 
             prettyPrint();
+
+            var first = true;
+
+            function setTocHeight() {
+                var sideAbout = $('.sidebar-about').outerHeight();
+                var fixedFooter = $('.fixed-footer').outerHeight();
+                var footerIconHeight = first ? 14 : 0;
+                
+                $('#toc').css('height', 'calc(100vh - ' + (sideAbout + fixedFooter + footerIconHeight) + 'px)');
+            }
+
+            setTocHeight();
+            first = false;
+
+            $(window).resize(setTocHeight);
         });
         </script>
 
